...
    taken: 'Alındı',
    notTaken: 'Alınmadı',
    skipped: 'Atlandı',
    missed: 'Kaçırıldı',
    medicineList: 'İlaç Detayları',
    name: 'İlaç Adı',
    dosage: 'Dozaj',
    frequency: 'Sıklık',
    times: 'Saatler',
    dailyLog: 'Günlük Kayıtlar',
    date: 'Tarih',
    time: 'Saat',
    status: 'Durum',
    generatedAt: 'Rapor Tarihi',
...
