...
        title={
          timePickerState.editingTimeIndex !== null
            ? language === 'tr'
              ? 'Saati Düzenle'
              : 'Edit Time'
            : language === 'tr'
              ? 'Saat Ekle'
              : 'Add Time'
        }
        onConfirm={(timeStr, h, m) => {
          const date = new Date();
          date.setHours(h, m, 0, 0);
          onTimeChange(
...
